# GalacticEngine

./: .pre-commit-config.yaml  Attribution.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  check-naming.py
.cache/clangd/index/: galactic.cpp.0CCD10366A1A84BA.idx
.github/workflows/: cmake-multi-platform.yml  codeql.yml
cmake/: galactic-config.cmake.in  utils.cmake
examples/: CMakeLists.txt
include/galactic/: galactic.h
src/: galactic.cpp
tests/: CMakeLists.txt
